# MediaLens

./: .gitignore  Makefile  MediaLens.spec  NEXT_SESSION_PLAN.md  README.md  ReleaseNotes.md  build-installer.md  git_log.txt  git_log_subjects.txt  git_log_utf8.txt  gitlog.txt  installer.iss  pyproject.toml  requirements-local-ai-gemma.txt  requirements-local-ai-internlm-xcomposer2.txt  requirements-local-ai-wd-swinv2.txt  requirements-local-ai.txt  requirements-local-ocr-paddle.txt  requirements.txt  run.py  setup.cfg  test_lock.py  test_qt_audio.py  test_rotate.py  tmp_query_test.sqlite
.agent/: README.md
.agent/workflows/: build-installer.md  version-bump.md
.claude/: settings.local.json
app/mediamanager/: search_query.py
docs/: AI Agent Collaboration Guide.md  CHANGELOG.md  Instructions.md  dev-workflow.md
docs/workflows/: build-installer.md
logs/TextDetection/: text_detection_20260402.jsonl  text_detection_20260403.jsonl  text_detection_20260404.jsonl  text_detection_20260405.jsonl  text_detection_20260411.jsonl  text_detection_20260412.jsonl  text_detection_20260413.jsonl  text_detection_20260416.jsonl  text_detection_20260417.jsonl  text_detection_20260420.jsonl  text_detection_20260422.jsonl
native/mediamanagerx_app/: CHANGELOG.md  SEARCH_SYNTAX.md  TOS.md  bridge.py  main.py  (+37 more)
scripts/: build.py  build_installer.ps1  text_detection_report.py  use_installed_local_ai_paths.ps1  version_bump.py
tests/: test_db_init.py  test_library_backup.py  test_media_repo.py  test_metadata_repo.py  test_selection_state.py  test_tags_repo.py
tmp/: phash_probe.db
(+48 files in other folders)
