[project]
name = "mediamanagerx"
version = "1.1.1"
description = "Local-first media asset manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8.2.1,<6.10",
  "Pillow>=10.0.0",
  "ImageHash>=4.3.1",
]

[project.scripts]
mediamanagerx = "native.mediamanagerx_app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
